Misc. Refactorings